--- a/CSS/spear-phishing.css
+++ b/CSS/spear-phishing.css
@@ -1,6 +1,6 @@
 .coverImage {
-	background-image: url(/images/spear-phishing.jpeg);
-	background-position: center;
+	background-image: url(/images/spear-phishing/Titelbild_mobil.png);
+	background-position:center 0.1px;
 	background-size: cover;
 	background-color: black;
 }
